third_party/move/move-compiler-v2/tests/more-v1/parser/struct_without_fields.exp

Diagnostics:
error: invalid 'module' declaration
  ┌─ tests/more-v1/parser/struct_without_fields.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''
